deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  creationTimestamp: null
  name: nadav-test-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: nadav-test.cluster.koalaops.com
    http:
      paths:
      - backend:
          service:
            name: nadav-test-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nadav-test.cluster.koalaops.com
    secretName: nadav-test-tls-cert
status:
  loadBalancer: {}
